--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 
-    <iframe id="urlFrame" width="560" height="315" src="https://www.youtube.com/embed/zP3IC-PuZ9Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe id="urlFrame" width="560" height="315" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
     <script>
       const urls = [
